--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 <!-- LANDING -->
 
     <section id="landing">
+
+        <!-- HEADER -->
+
         <nav>
             <div class="nav__container">
                 <a href="" class="logo--wrapper">
@@ -28,6 +31,26 @@
                 </ul>
             </div>
         </nav>
+
+        <!-- HEADER -->
+
+        <header>
+            <div class="header__container">
+                <div class="header__description">
+                    <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
+                    <p class="header__para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+                    <div class="input__button">
+                    <input type="text" placeholder="Your E-mail Address" >
+                    <button>Get Started</button>
+                    </div>
+                    <div class="trusted__costumers">
+                        <p class="costumers__para">OUR TRUSTED COSTUMERS</p>
+                        <img class="costumers__img" src="./assets/trusted__costumers--img.png" alt="">
+                    </div>
+                </div>
+                <img src="./assets/header_img.svg" alt="">
+            </div>
+        </header>
     </section>
     
 </body>
