--- a/index.html
+++ b/index.html
@@ -8,50 +8,51 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-
+    <div class="body__spacing">
 <!-- LANDING -->
 
-    <section id="landing">
+        <section id="landing">
 
-        <!-- HEADER -->
+            <!-- HEADER -->
 
-        <nav>
-            <div class="nav__container">
-                <a href="" class="logo--wrapper">
-                        <img class="logo" src="./assets/logo.svg" alt="">
-                        Treact
-                </a>
-                <ul class="nav__links">
-                    <li><a href="" class="nav__link">About</a></li>
-                    <li><a href="" class="nav__link">Blog</a></li>
-                    <li><a href="" class="nav__link">Pricing</a></li>
-                    <li><a href="" class="nav__link">Contact Us</a></li>
-                    <li><a href="" class="nav__link login--link">Login</a></li>
-                    <li><a href="" class="nav__link sign_up--link">Sign Up</a></li>
-                </ul>
-            </div>
-        </nav>
-
-        <!-- HEADER -->
-
-        <header>
-            <div class="header__container">
-                <div class="header__description">
-                    <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
-                    <p class="header__para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
-                    <div class="input__button">
-                    <input type="text" placeholder="Your E-mail Address" >
-                    <button>Get Started</button>
-                    </div>
-                    <div class="trusted__costumers">
-                        <p class="costumers__para">OUR TRUSTED COSTUMERS</p>
-                        <img class="costumers__img" src="./assets/trusted__costumers--img.png" alt="">
-                    </div>
+            <nav>
+                <div class="nav__container">
+                    <a href="" class="logo--wrapper">
+                            <img class="logo" src="./assets/logo.svg" alt="">
+                            Treact
+                    </a>
+                    <ul class="nav__links">
+                        <li><a href="" class="nav__link">About</a></li>
+                        <li><a href="" class="nav__link">Blog</a></li>
+                        <li><a href="" class="nav__link">Pricing</a></li>
+                        <li><a href="" class="nav__link">Contact Us</a></li>
+                        <li><a href="" class="nav__link login--link">Login</a></li>
+                        <li><a href="" class="nav__link sign_up--link">Sign Up</a></li>
+                    </ul>
                 </div>
-                <img src="./assets/header_img.svg" alt="">
-            </div>
-        </header>
-    </section>
-    
+            </nav>
+
+            <!-- HEADER -->
+
+            <header>
+                <div class="header__container">
+                    <div class="header__description">
+                        <h1>Beautiful React Templates <span class="purple">for you.</span></h1>
+                        <p class="header__para">Our templates are easy to setup, understand and customize. Fully modular components with a variety of pages and components.</p>
+                        <div class="input__button">
+                        <input type="text" placeholder="Your E-mail Address" >
+                        <button>Get Started</button>
+                        </div>
+                        <div class="trusted__costumers">
+                            <p class="costumers__para">OUR TRUSTED CUSTOMERS</p>
+                            <img class="costumers__img" src="./assets/trusted__costumers--img.png" alt="">
+                        </div>
+                    </div>
+                    <img class="header__img" src="./assets/header_img.svg" alt="">
+                </div>
+            </header>
+        </section>
+        
+    </div>
 </body>
 </html>
