Main_Features_Section (HTML)

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 </head>
 <body>
     <div class="body__spacing">
-<!-- LANDING -->
-
         <section id="landing">
 
             <!-- HEADER -->
@@ -53,6 +51,78 @@
             </header>
         </section>
         
+        <!-- MAIN -->
+
+        <section id="main">
+            <main>
+                <div class="row">
+                    <div class="container">
+                        <div class="features">
+                            <h5 class="features__subheading"><span class="purple">FEATURES</span></h5>
+                            <h2>We have Amazing <span class="purple">Service.</span></h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                            <div class="feature__info">
+                                <div class="feature__section">
+                                    <span class="feature__img--wrapper">
+                                        <img src="./assets/features_section_1.svg" alt="">
+                                    </span>
+                                    <span class="text--wrapper">
+                                        <span class="section__title">Secure</span>
+                                        <span class="section__description">We strictly only deal with vendors that provide top notch security.</span>
+                                    </span>
+                                </div>
+                                <div class="feature__section">
+                                    <span class="feature__img--wrapper">
+                                        <img src="./assets/features_section_2.svg" alt="">
+                                    </span>
+                                    <span class="text--wrapper">
+                                        <span class="section__title">24/7 Support</span>
+                                        <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
+                                    </span>
+                                </div>
+                                <div class="feature__section">
+                                    <span class="feature__img--wrapper">
+                                        <img src="./assets/features_section_3.svg" alt="">
+                                    </span>
+                                    <span class="text--wrapper">
+                                        <span class="section__title">Customizable</span>
+                                        <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
+                                    </span>
+                                </div>
+                                <div class="feature__section">
+                                    <span class="feature__img--wrapper">
+                                        <img src="./assets/features_section_4.svg" alt="">
+                                    </span>
+                                    <span class="text--wrapper">
+                                        <span class="section__title">Reliable</span>
+                                        <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
+                                    </span>
+                                </div>
+                                <div class="feature__section">
+                                    <span class="feature__img--wrapper">
+                                        <img src="./assets/features_section_5.svg" alt="">
+                                    </span>
+                                    <span class="text--wrapper">
+                                        <span class="section__title">Fast</span>
+                                        <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
+                                    </span>
+                                </div>
+                                <div class="feature__section">
+                                    <span class="feature__img--wrapper">
+                                        <img src="./assets/features_section_6.svg" alt="">
+                                    </span>
+                                    <span class="text--wrapper">
+                                        <span class="section__title">Easy</span>
+                                        <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
+                                    </span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </main>
+        </section>
+
     </div>
 </body>
 </html>
