--- a/index.html
+++ b/index.html
@@ -55,69 +55,75 @@
 
         <main>
             <section id="features">
-                <div class="container">
-                    <div class="row">
-                        <div class="features__header">
-                            <h5 class="features__subheading"><span class="purple">FEATURES</span></h5>
-                            <h2 class="features__heading">We have Amazing <span class="purple">Service.</span></h2>
-                            <p class="features__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                        <div class="vertical__spacer"></div>
-                        <div class="feature__info">
-                            <div class="feature__section">
-                                <span class="feature__img--wrapper">
-                                    <img src="./assets/features_section_1.svg" alt="">
-                                </span>
-                                <span class="text--wrapper">
-                                    <span class="section__title">Secure</span>
-                                    <span class="section__description">We strictly only deal with vendors that provide top notch security.</span>
-                                </span>
-                            </div>
-                            <div class="feature__section">
-                                <span class="feature__img--wrapper">
-                                    <img src="./assets/features_section_2.svg" alt="">
-                                </span>
-                                <span class="text--wrapper">
-                                    <span class="section__title">24/7 Support</span>
-                                    <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
-                                </span>
-                            </div>
-                            <div class="feature__section">
-                                <span class="feature__img--wrapper">
-                                    <img src="./assets/features_section_3.svg" alt="">
-                                </span>
-                                <span class="text--wrapper">
-                                    <span class="section__title">Customizable</span>
-                                    <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
-                                </span>
-                            </div>
-                            <div class="feature__section">
-                                <span class="feature__img--wrapper">
-                                    <img src="./assets/features_section_4.svg" alt="">
-                                </span>
-                                <span class="text--wrapper">
-                                    <span class="section__title">Reliable</span>
-                                    <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
-                                </span>
-                            </div>
-                            <div class="feature__section">
-                                <span class="feature__img--wrapper">
-                                    <img src="./assets/features_section_5.svg" alt="">
-                                </span>
-                                <span class="text--wrapper">
-                                    <span class="section__title">Fast</span>
-                                    <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
-                                </span>
-                            </div>
-                            <div class="feature__section">
-                                <span class="feature__img--wrapper">
-                                    <img src="./assets/features_section_6.svg" alt="">
-                                </span>
-                                <span class="text--wrapper">
-                                    <span class="section__title">Easy</span>
-                                    <span class="section__description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</span>
-                                </span>
-                            </div>
+                <div class="features__container">
+                    <h5 class="features__subheading"><span class="purple">FEATURES</span></h5>
+                    <h2 class="features__heading">We have Amazing <span class="purple">Service.</span></h2>
+                    <p class="features__description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <div class="vertical__spacer"></div>
+                    <div class="feature__section--container">
+                        <div class="feature__section">
+                            <span class="feature__img--container">
+                                <img class="feature__img" src="./assets/features_section_1.svg" alt="">
+                            </span>
+                            <span class="text__container">
+                                <span class="feature__section--title">Secure</span>
+                                <p class="feature__section--description">We strictly only deal with vendors that provide top notch security.</p>
+                            </span>
                         </div>
+                    </div>
+                    <div class="feature__section--container">
+                        <div class="feature__section">
+                            <span class="feature__img--container">
+                                <img class="feature__img" src="./assets/features_section_2.svg" alt="">
+                            </span>
+                            <span class="text__container">
+                                <span class="feature__section--title">24/7 Support</span>
+                                <p class="feature__section--description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="feature__section--container">
+                        <div class="feature__section">
+                            <span class="feature__img--container">
+                                <img class="feature__img" src="./assets/features_section_3.svg" alt="">
+                            </span>
+                            <span class="text__container">
+                                <span class="feature__section--title">Customizable</span>
+                                <p class="feature__section--description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="feature__section--container">
+                        <div class="feature__section">
+                            <span class="feature__img--container">
+                                <img class="feature__img" src="./assets/features_section_4.svg" alt="">
+                            </span>
+                            <span class="text__container">
+                                <span class="feature__section--title">Reliable</span>
+                                <p class="feature__section--description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="feature__section--container">
+                        <div class="feature__section">
+                            <span class="feature__img--container">
+                                <img class="feature__img" src="./assets/features_section_5.svg" alt="">
+                            </span>
+                            <span class="text__container">
+                                <span class="feature__section--title">Fast</span>
+                                <p class="feature__section--description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </span>
+                        </div>
+                    </div>
+                    <div class="feature__section--container">
+                        <div class="feature__section">
+                            <span class="feature__img--container">
+                                <img class="feature__img" src="./assets/features_section_6.svg" alt="">
+                            </span>
+                            <span class="text__container">
+                                <span class="feature__section--title">Easy</span>
+                                <p class="feature__section--description">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </span>
                         </div>
                     </div>
                 </div>
